--- a/privacy.html
+++ b/privacy.html
@@ -1,39 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy – MAWed Extension</title>
-  <style>
-    body { font-family: sans-serif; max-width: 700px; margin: 40px auto; line-height: 1.6; padding: 0 20px; }
-    h1 { color: #333; }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Privacy Policy</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            max-width: 800px;
+            margin: 40px auto;
+            line-height: 1.7;
+            padding: 0 20px;
+            color: #333;
+        }
+        h1, h2 {
+            color: #222;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 8px;
+            margin-top: 40px;
+        }
+        h1 {
+            margin-top: 0;
+        }
+        code {
+            background-color: #f5f5f5;
+            padding: 2px 6px;
+            border-radius: 4px;
+            font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, monospace;
+            font-size: 14px;
+        }
+        ul {
+            padding-left: 20px;
+        }
+    </style>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  
+    <h1>Privacy Policy</h1>
 
-  <p>This extension does not collect, store, or transmit any personal data.</p>
+    <p>
+        This privacy policy applies to all browser extensions published by this developer. We are committed to protecting your privacy. Our extensions do not collect, store, or transmit any personally identifiable information.
+    </p>
 
-  <p>All data related to watched videos is saved <strong>locally in your browser</strong> using <code>localStorage</code>. Nothing is sent to any remote servers.</p>
+    <h2>Local Data Storage</h2>
+    <p>
+        All data required for the extension to function, such as user settings, preferences, or user-generated lists (e.g., a list of watched videos), is saved <strong>locally on your computer</strong> using the browser's built-in storage. Nothing is ever sent to any remote servers. All data remains on your device.
+    </p>
 
-  <p>The extension does <strong>not</strong> use any cookies, tracking tools, or analytics.</p>
+    <h2>Permissions Justification</h2>
+    <p>
+        This extension requests permission to access <code>https://www.youtube.com/*</code> pages. This permission is required solely to enable the extension's core features, which involves reading the page structure and modifying the YouTube user interface (e.g., hiding specific videos or adding interface elements). No data from the page is collected or shared externally.
+    </p>
 
-  <h2>Permissions</h2>
-  <p>This extension requests permission to access <code>https://www.youtube.com/*</code> only to modify the interface and allow you to manually mark videos as watched. No data is shared externally.</p>
+    <h2>No Data Collection</h2>
+    <p>We do <strong>not</strong> collect, handle, or transmit:</p>
+    <ul>
+        <li>Personally identifiable information (name, email, etc.)</li>
+        <li>Authentication, financial, or health information</li>
+        <li>Your location or Browse history</li>
+        <li>Personal communications or user activity (clicks, keystrokes, etc.)</li>
+        <li>Any content from the websites you visit</li>
+    </ul>
 
-  <h2>No Data Collection</h2>
-  <p>We do <strong>not</strong> collect:</p>
-  <ul>
-    <li>Personally identifiable information</li>
-    <li>Location or browsing history</li>
-    <li>Passwords or financial information</li>
-    <li>User communications or content</li>
-  </ul>
+    <h2>Contact</h2>
+    <p>
+        If you have any questions about this privacy policy, please contact the developer through the extension's store listing page.
+    </p>
 
-  <h2>Contact</h2>
-  <p>If you have questions, please contact the developer through the Chrome Web Store listing.</p>
+    <p>
+        <em>Last updated: June 11, 2025</em>
+    </p>
 
-  <p><em>Last updated: May 2025</em></p>
 </body>
 </html>
